# SnapTo3D

./: .gitignore  CHECKLIST_TRIPOSR.md  PRD_SnapTo3D.md  README.md  TUTORIAL.md
backend/: main.py  modal_app.py  pyproject.toml  requirements.txt
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimationControls.tsx  BackgroundControls.tsx  LightingControls.tsx  ModelUploadZone.tsx  ThreeScene.tsx  UploadZone.tsx
frontend/hooks/: useVideoExporter.ts
