[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend and Modal GPU orchestrator for SnapTo3D"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.136.3",
    "modal>=0.72.0",
    "python-dotenv>=1.0.0",
]

[tool.fastapi]
entrypoint = "main:app"
